style.css
@import url("https://fonts.googleapis.com/css2?family=Lora:wght@400;500;600&family=PT+Sans:wght@400;700&display=swap");

* {
  box-sizing: border-box;
  padding: 0;
  margin: 0;
}

body {
  font-family: "Lora", serif;
  font-weight: 400;
  color: var(--neutral-black);
  background: #f2f2f2;
  line-height: 1.5;
}

ul {
  list-style: none;
}

a {
  color: #333;
  text-decoration: none;
}

h1 {
  font-family: "PT Sans", sans-serif;
  font-weight: 400;
  line-height: 1.2;
}

h2,
h3,
h4,
h5,
h6 {
  font-family: "Lora", serif;
  font-weight: 500;
  margin-bottom: 1rem;
  line-height: 1.3;
}

p {
  margin: 10px 0;
}

img {
  width: 100%;
}

/* Header */
#main-header {
  height: 100vh;
  background: linear-gradient(90deg, #0b4b40 70%, #1fc567 30%);
  /* overflow: hidden; */
}

#main-header .container {
  display: grid;
  position: relative;
  grid-template-columns: 7fr 3fr;
}

#main-header .container .left-container {
  display: flex;
  flex-direction: column;
  padding-left: 50px;
  padding-top: 20px;
}

#main-header .container .left-container .left-container-nav {
  display: flex;
  flex-direction: row;
  align-items: baseline;
}

#main-header .container .left-container .left-container-nav .logo {
  margin-right: 100px;
  color: var(--neutral-white);
  font-size: 24px;
}

#main-header .container .left-container .left-container-nav a:not(.logo) {
  font-size: 18px;
  margin-right: 40px;
  color: var(--neutral-white);
}

#main-header .container .left-container .left-container-nav a:hover:not(.logo) {
  border-bottom: 1px solid var(--primary-100);
}

#main-header .container .left-container .left-container-content {
  padding-top: 40px;
  margin-top: 60px;
  color: var(--neutral-white);
}

#main-header .container .left-container .left-container-content h1 {
  font-size: 6rem;
  margin-bottom: 2rem;
}

#main-header .container .left-container .left-container-content p {
  margin-bottom: 1rem;
}

#main-header .container .right-container {
  display: flex;
  flex-direction: column;
  padding-top: 20px;
  align-items: center;
}

#main-header .container .floating-hero {
  z-index: 5;
  position: absolute;
  background: url(./images/law-statue.jpg) no-repeat center center/cover;
  top: 30%;
  left: 50%;
  width: 500px;
  height: 500px;
  border: 3px solid var(--neutral-white);
}

#main-header .container .floating-hero::after {
  content: "";
  position: absolute;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  background: #35353577;
}

/* Ratings */
#rating-highlight {
  height: 80px;
  background: var(--accent-200);
}

#rating-highlight .container {
  display: flex;
  justify-content: center;
  align-items: center;
  text-align: center;
  margin: auto;
}

#rating-highlight .container p {
  padding-top: 15px;
}

/* Services */
#services {
  background: #e6f4e7;
}
.service-card {
  padding: 40px 12px;
  height: 300px;
  width: 300px;
  display: flex;
  flex-direction: column;
  align-items: flex-start;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
  border-radius: 6px;
  background: var(--neutral-white);
}

.service-card:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

#services .services-content .services-content-left {
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: flex-start;
  padding: 30px;
}

#services .services-content .services-content-left h4,
#services .services-content .services-content-left h2,
#services .services-content .services-content-left a {
  align-self: center;
}

#services .services-content .services-cards {
  display: grid;
  padding: 10px 60px;
  grid-template-columns: repeat(2, 1fr);
  grid-template-rows: repeat(2, 1fr);
  grid-gap: 20px;
}

/* Team */

/* Cards */
.team-card {
  padding: 40px 12px;
  height: 500px;
  width: 300px;
  gap: 10px;
  display: flex;
  flex-direction: column;
  align-items: center;
  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
  transition: 0.3s;
}

.team-card:hover {
  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
}

.team-card img {
  height: 100%;
  width: 90%;
}

/* Footer */
#main-footer {
  background: var(--neutral-black);
  color: var(--neutral-white);
  padding-top: 20px;
}

#main-footer .container .logo {
  padding-left: 20px;
}

#main-footer a {
  color: var(--neutral-white);
  transition: color 0.8s ease;
}

#main-footer a:hover:not(.logo-link) {
  color: var(--primary-100);
}

#main-footer .container {
  display: grid;
  grid-template-columns: repeat(4, 1fr);
  grid-gap: 1.5rem;
}

#main-footer .footer-container > *:last-child {
  background: var(--neutral-grey);
  grid-column: 1 / span 4;
  padding: 0.5rem;
  text-align: center;
  font-size: 0.7rem;
}

#main-footer .footer-container > :nth-child(4) {
  padding-right: 20px;
}

#main-footer .footer-container input[type="email"] {
  width: 90%;
  padding: 0.5rem;
  margin-bottom: 0.5rem;
}

#main-footer .footer-container input[type="submit"] {
  width: 90%;
}

/* Contact Page */
#contact-page {
  display: grid;
  grid-template-areas:
    "header"
    "main"
    "footer";
}

.header-b {
  grid-area: header;
}
.main-b {
  grid-area: main;
}

.footer-b {
  grid-area: footer;
}

#contact-page .header-b {
  height: 12vh;
  /* padding-bottom: 20px; */
}

/* Form */
#contact .form-container {
  background: var(--accent-100);
  margin: 10px 300px 30px;
  border-radius: 8px;
  padding: 10px 20px 6px;
  height: 82vh;
}

#contact .form-container .form-container-white {
  background: var(--neutral-white);
  border-radius: 10px;
  height: 48vh;
  margin: 1px 60px 0px;
}

#contact .form-container .form-content {
  display: flex;
  flex-direction: column;
  color: var(--neutral-white);
}

#contact .form-container .form-content:nth-child(1) {
  display: flex;
  flex-direction: column;
  justify-content: center;
  text-align: center;
}

#contact .form-container .form-content .contact-icons {
  display: flex;
  flex-direction: row;
  align-items: center;
  justify-content: center;
  text-align: center;
  justify-content: space-around;
  margin-top: 20px;
  margin-bottom: 20px;
}

#contact .form-container .form-container-white .form-inputs {
  display: flex;
  flex-direction: column;
}

#contact .form-container .form-container-white .form-inputs h3 {
  margin: 8px 20px 6px;
}

#contact .form-container .form-container-white .form-inputs > div .grid-form {
  display: grid;
  grid-template-columns: repeat(9, auto);
  grid-template-rows: repeat(7, auto);
  gap: 8px;
  padding: 20px;
}

#contact .form-container .form-container-white #name {
  grid-row: 1 / span 1;
  grid-column: 1 / span 3;
  height: 44px;
  border-radius: 4px;
}
#contact .form-container .form-container-white #email {
  grid-row: 2 / span 1;
  grid-column: 1 / span 3;
  height: 44px;
  border-radius: 4px;
}
#contact .form-container .form-container-white #phone {
  grid-row: 3 / span 1;
  grid-column: 1 / span 3;
  height: 44px;
  border-radius: 4px;
}
#contact .form-container .form-container-white #text-area {
  grid-row: 1 / span 3;
  grid-column: 5 / span 5;
  border-radius: 4px;
}
#contact .form-container .form-container-white #button-title {
  grid-row: 4 / span 1;
  grid-column: 1 / span 3;
}

#contact
  .form-container
  .form-container-white
  .form-inputs
  .form-input-services {
  grid-row: 5 / span 1;
  grid-column: 1 / span 9;
  display: flex;
  flex-direction: row;
  margin-bottom: 2px;
}

#contact .form-container .form-container-white .form-inputs #submit {
  grid-row: 6 / span 1;
  grid-column: 4 / span 2;
}

/* #contact .form-container input {
  width: 160px;
  height: 40px;
  border-radius: 6px;
  margin: 10px 10px 20px;
} */

/* #contact .form-container textarea {
  height: 140px;
} */

#contact .form-container .form-container-white .form-input-services > input {
  /* padding: 6px 10px 6px; */
  border-radius: 4px;
  border-color: transparent;
  margin-right: 80px;
}

/* #contact .form-container .form-container-white .grid-form textarea {} */

#contact
  .form-container
  .form-container-white
  .form-input-services
  > input:hover {
  color: var(--accent-100);
  border-color: var(--primary-400);
}

